9209
Full disclosure:
```scala
cala> class C(x: Int = 1)(y: Int)
defined class C

scala> new C
<console>:14: error: missing argument list for constructor C in class C
Error occurred in an application involving default arguments.
       new C
       ^

scala> new C()
<console>:14: error: missing argument list for constructor C in class C
Error occurred in an application involving default arguments.
       new C()
       ^

scala> new C()()
<console>:14: error: not enough arguments for constructor C: (y: Int)C.
Unspecified value parameter y.
       new C()()
       ^
```
These error messages are especially problematic because repl doesn't offer completion for constructors, so you really don't know what you're looking at.
